# notebooks

./: .gitignore  README.md  pyproject.toml
notebooks/: deep.ipynb  deep1.ipynb  deep3.ipynb
